# fishplotpy

./: .gitignore  README.md  pyproject.toml  requirements.txt  usage.py
examples/: another_usage.py  usage.py
fishplotpy/: __init__.py  data.py  plot.py
tests/: test_data.py  test_plot.py
